gl31-master/src/test/deca/context/invalid/sansobjet/int_boolean_operation.deca
// Description:
//    Opérations : entre un float et un boolean
//
// Resultats:
//    Erreur : Types incompatibles, opération interdite
//
// Historique:
//    cree le 13/01/2021

{
    float a;
    boolean b;
    float r;
    r = a - b;
}

